--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ border: 5px solid black;
 
 grid {
     display: grid;
-    grid-template-columns: repeat(16, 80px);
-    grid-template-rows: repeat(16, 80px);
-    grid-gap: 5px;
+    grid-template-columns: repeat(16, 50px);
+    grid-template-rows: repeat(16, 50px);
+   
 }
 
 cell {
@@ -15,4 +15,8 @@ cell {
     align-items: center;
     display: flex;
     background: white;
+}
+
+.color {
+    background-color: aqua;
 }
