--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
+.content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 960px;
+}
 .container {
 display: inline-block;
 border: 5px solid black;
 }
 
+
 grid {
     display: grid;
-    grid-template-columns: repeat(16, 50px);
-    grid-template-rows: repeat(16, 50px);
+    grid-template-columns: repeat(16, 60px);
+    grid-template-rows: repeat(16, 60px);
    
 }
 
@@ -15,6 +22,7 @@ cell {
     align-items: center;
     display: flex;
     background: white;
+    
 }
 
 .color {
