Add functionality to delete cells upon reset button and populate grid with inputted squares

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ grid {
    
 }
 
-cell {
+cell, newCell {
     background: white;
     border: solid black 1px;
 }
@@ -30,3 +30,4 @@ cell {
 .color {
     background-color: aqua;
 }
+
